added the endpoints to set/unset the sensor to a zone, to get the zone parameters averages (same for the greenhouses), to get the free sensors (which were not assigned to a zone)
