# flask_app/static/swagger.json
@@ -10,44 +10,9 @@
 
 
   "paths": {
-    "/token": {
-      "get": {
-        "summary": "Get access token",
-        "responses": {
-          "200": {
-            "description": "Returns JWT token",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "jwt": {
-                  "type": "string"
-                }
-              }
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "role",
-            "in": "query",
-            "description": "Role for the token",
-            "required": true,
-            "type": "string"
-          }
-        ]
-      }
-    },
-
-
-
     "/create-greenhouse": {
       "post": {
         "summary": "Create a new greenhouse",
-        "security": [
-          {
-            "jwt": []
-          }
-        ],
         "responses": {
           "200": {
             "description": "Greenhouse created successfully",
@@ -101,11 +66,6 @@
     "/get-greenhouses": {
       "get": {
         "summary": "Get basic data about greenhouses",
-        "security": [
-          {
-            "jwt": []
-          }
-        ],
         "responses": {
           "200": {
             "description": "Returns basic data about greenhouses",
@@ -181,11 +141,6 @@
     "/get-greenhouse/{greenhouse_id}": {
       "get": {
         "summary": "Get basic data about a greenhouse",
-        "security": [
-          {
-            "jwt": []
-          }
-        ],
         "responses": {
           "200": {
             "description": "Returns basic data about a greenhouse",
@@ -251,11 +206,6 @@
     "/update-greenhouse/{greenhouse_id}": {
       "put": {
         "summary": "Update a greenhouse",
-        "security": [
-          {
-            "jwt": []
-          }
-        ],
         "responses": {
           "200": {
             "description": "Updated successfully!"
@@ -305,11 +255,6 @@
     "/delete-greenhouse/{greenhouse_id}": {
       "delete": {
         "summary": "Delete a greenhouse",
-        "security": [
-          {
-            "jwt": []
-          }
-        ],
         "responses": {
           "200": {
             "description": "Greenhouse deleted successfully!"
@@ -332,14 +277,5 @@
         ]
       }
     }    
-  },
-
-
-  "securityDefinitions": {
-    "jwt": {
-      "type": "apiKey",
-      "name": "Authorization",
-      "in": "header"
-    }
   }
 }
